Few changes made

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOOP AND STRING with JS</title>
-</head>
-<body>
-    <h1> Self Practice: JS LOOP AND STRING</h1>
+  </head>
+  <body>
+    <h1>Self Practice: JS LOOP AND STRING</h1>
     <h4><u>Loop</u></h4>
-    <p>Loop used inside the JS to see the things repeatdly</p>
+    <p>Loop used inside the JS to see the things repeatdly by coding</p>
+    <p> Formation of Loop : for(let i=1; i<= 5; i++)</p>
+    <p>Here Let is veriable and under this veriable we are using 3 statement</p>
+    <p>First , i,  indicate initial variable statement. So you can put any name as per your need</p>
+    <p>second, i,  indicate stopping condition statement</p>
+    <p>Third, i,  indicate updatation statement means it will continue and based on the second condition statement it will show boolean value</p>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
