--- a/index.html
+++ b/index.html
@@ -7,13 +7,43 @@
   </head>
   <body>
     <h1>Self Practice: JS LOOP AND STRING</h1>
-    <h4><u>Loop</u></h4>
+    <h2><u>for Loop</u></h2>
     <p>Loop used inside the JS to see the things repeatdly by coding</p>
-    <p> Formation of Loop : for(let i=1; i<= 5; i++)</p>
+    <p><u>Formation of Loop :</u> for(let i=1; i<= 5; i++)</p>
     <p>Here Let is veriable and under this veriable we are using 3 statement</p>
-    <p>First , i,  indicate initial variable statement. So you can put any name as per your need</p>
-    <p>second, i,  indicate stopping condition statement</p>
-    <p>Third, i,  indicate updatation statement means it will continue and based on the second condition statement it will show boolean value</p>
+    <p>
+      First , i, indicate initial variable statement. So you can put any name as
+      per your need
+    </p>
+    <p>second, i, indicate stopping condition statement</p>
+    <p>
+      Third, i, indicate updatation statement means it will continue and
+      <br />based on the second condition statement it will run untill given
+      condition value
+    </p>
+
+    <h2><u>while loop</u></h2>
+    <p>
+      This loop works almost similar like for loop. Whatever we can do by for
+      loop, we can do the same things by while loop too. Just difference is we
+      can write the code in different formation
+    </p>
+    <p><u>Formation of Loop :</u> while(condition){...do your code...}</p>
+
+    <h2><u>do-while loop</u></h2>
+    <p>
+      this bascially oppositie of while loop. here we do the code/print first
+      then put the condition <br />
+      and there will be a semicolon(;) after the condition in do-while loop. But
+      for while loop this is not needed
+    </p>
+    <p><u>Formation of Loop :</u> do{...do your code...} while(condition);</p>
+
+    <h5>
+      Note : infinite loop- make sure we will not use infinite loop in coding
+      otherwsie system might get crush if value is showing always tru. So we
+      have to difine in condtion which will have some limition of stopping
+    </h5>
 
     <script src="index.js"></script>
   </body>
