updated few line

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <h1>Self Practice: JS LOOP AND STRING</h1>
     <h2><u>for Loop</u></h2>
     <p>Loop used inside the JS to see the things repeatdly by coding</p>
-    <p><u>Formation of Loop :</u> for(let i=1; i<= 5; i++)</p>
+    <pre><u>Formation of Loop :</u> 
+      for(let i=0; i<= array.length; i++)
+      {
+         console.log("Variable")
+      }
+    
+    </pre>
     <p>Here Let is veriable and under this veriable we are using 3 statement</p>
     <p>
       First , i, indicate initial variable statement. So you can put any name as
       per your need
     </p>
+
     <p>second, i, indicate stopping condition statement</p>
     <p>
       Third, i, indicate updatation statement means it will continue and
@@ -37,13 +44,14 @@
       and there will be a semicolon(;) after the condition in do-while loop. But
       for while loop this is not needed
     </p>
-    <p><u>Formation of Loop :</u> do{...do your code...} while(condition);</p>
+    <p><u>Formation of Loop :</u> do{ console.log("variable")} while(condition);</p>
 
     <h5>
       Note : infinite loop- make sure we will not use infinite loop in coding
       otherwsie system might get crush if value is showing always tru. So we
       have to difine in condtion which will have some limition of stopping
     </h5>
+
 
     <script src="index.js"></script>
   </body>
